<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/tripCard"
  android:background="@color/transparent"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:cardCornerRadius="4dp"
  app:cardUseCompatPadding="true">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/innerLayout"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <ImageView
    android:id="@+id/closeButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
    android:contentDescription="@string/close_description" />

  <TextView
    android:id="@+id/dialogTitle"
    style="@style/DialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    tools:text="@string/dialog_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/closeButton" />

  <TextView
    android:id="@+id/dialogText"
    style="@style/DialogText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="64dp"
    android:layout_marginStart="64dp"
    android:layout_marginTop="16dp"
    android:gravity="center_horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
    tools:text="@string/dialog_text" />

    <Button
      android:id="@+id/cancel_button"
      style="@style/DialogCancelButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/button_background"
      android:padding="20dp"
      android:textAllCaps="false"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dialogText"
      tools:text="@string/dialog_cancel" />

  <TextView
    android:id="@+id/confirm_button"
    style="@style/DialogConfirmationButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="64dp"
    android:layout_marginTop="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cancel_button"
    tools:text="@string/dialog_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
