<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >
    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:elevation="0dp">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        app:elevation="0dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/background"
        app:titleTextAppearance="@style/ToolbarTitle">

      </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/title"
    android:layout_marginBottom="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/rideDate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      tools:text="Thu 6/17"
      style="@style/RideDate"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <TextView
      android:id="@+id/rideTime"
      style="@style/RideTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      app:layout_constraintBottom_toBottomOf="@+id/rideDate"
      app:layout_constraintStart_toEndOf="@+id/rideDate"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="4:18a - 4:26p" />

    <TextView
      android:id="@+id/estimatedLabel"
      style="@style/EstimatedLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/estimated"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/estimatedAmount"
      style="@style/EstimatedTextDetails"
      android:padding="8dp"
      android:background="@drawable/estimated_text_background"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/estimatedLabel"
      tools:text="$105.25" />

  </androidx.constraintlayout.widget.ConstraintLayout>
  <fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/title"
    tools:context=".details.TripDetailsActivity" />

  <TextView
    android:id="@+id/seriesText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/this_trip_is_part_of_a_series"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/map" />

  <com.google.android.material.divider.MaterialDivider
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/divider1"
    app:layout_constraintEnd_toEndOf="parent"
    app:dividerColor="@color/dividerGrey"
    android:layout_marginTop="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/seriesText"
    />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/waypoints"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/divider1" />


  <com.google.android.material.divider.MaterialDivider
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/divider2"
    app:layout_constraintEnd_toEndOf="parent"
    app:dividerColor="@color/dividerGrey"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/waypoints"
    />

  <TextView
    android:id="@+id/tripInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:gravity="start"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/divider2"
    tools:text="Trip ID: af5d050caaa63f * 18.48 mi * 50 min" />

  <com.google.android.material.divider.MaterialDivider
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/divider4"
    app:layout_constraintEnd_toEndOf="parent"
    app:dividerColor="@color/dividerGrey"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tripInfo"
    />

  <TextView
    android:id="@+id/cancelButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/CancelText"
    android:layout_marginTop="8dp"
    android:text="@string/cancelTrip"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/divider4" />

</androidx.constraintlayout.widget.ConstraintLayout>
